# shake

./: .ghci  .gitignore  .hlint.yaml  .travis.yml  .weeder.yaml  CHANGES.txt  CITATION.cff  CONTRIBUTING.md  LICENSE  Main.hs  Paths.hs  README.md  Start.hs  Test.hs  appveyor.yml  benchmark.sh  boring  hie.yaml  shake.cabal  test-make.sh  travis.hs  travis.sh  wercker.yml
.github/workflows/: ci.yml
Development/: Shake.hs
Development/Make/: All.hs  Env.hs  Main.hs  Parse.hs  Rules.hs  Run.hs  Type.hs
Development/Ninja/: All.hs  Env.hs  Eval.hs  Lexer.hs  Parse.hs  Type.hs
Development/Shake/: Args.hs  Binary.hs  ByteString.hs  Classes.hs  Command.hs  Config.hs  Continue.hs  Core.hs  Database.hs  Demo.hs  Derived.hs  Directory.hs  Errors.hs  File.hs  FileInfo.hs  FilePath.hs  FilePattern.hs  FileTime.hs  Files.hs  General.hs  Intern.hs  Locks.hs  Ls.hs  ModTime.hs  Monad.hs  Oracle.hs  Pool.hs  Prelude.hs  Profile.hs  Progress.hs  Report.hs  Rerun.hs  Resource.hs  Rule.hs  Shake.hs  Special.hs  Storage.hs  Sys.hs  Task.hs  Timing.hs  (+4 more)
Development/Shake/Rules/: Directory.hs  File.hs  Files.hs  Oracle.hs  OrderOnly.hs  Rerun.hs
Examples/: Util.hs
Examples/C/: Main.hs
Examples/MakeTutor/: hellofunc.c
Examples/Ninja/: Main.hs  compdb.out  lint.ninja  test1.ninja  test2.ninja  test3-unix.ninja  test4.ninja  test5.ninja
Examples/Self/: Main.hs
Examples/Tar/: Main.hs  list.txt
Examples/Test/: Assume.hs  Basic.hs  Basic1.hs  Benchmark.hs  Cache.hs  Command.hs  Config.hs  Digest.hs  Directory.hs  Docs.hs  Errors.hs  FilePath.hs  FilePattern.hs  Files.hs  Journal.hs  Lint.hs  Makefile.hs  Manual.hs  Monad.hs  Oracle.hs  OrderOnly.hs  Pool.hs  Progress.hs  Random.hs  Resources.hs  Throttle.hs  Unicode.hs  Util.hs  Verbosity.hs
General/: Base.hs  Bilist.hs  Binary.hs  Cleanup.hs  Concurrent.hs  Extra.hs  Prelude.hs  RAW.hs  String.hs  Template.hs  Timing.hs
Test/: Basic.hs  C.hs  Command.hs  Config.hs  Directory.hs  Docs.hs  Errors.hs  FilePath.hs  Lint.hs  Live.hs  Makefile.hs  Manual.hs  Monad.hs  Ninja.hs  Oracle.hs  OrderOnly.hs  Pool.hs  Progress.hs  Random.hs  Self.hs  Tar.hs  Throttle.hs  Type.hs  Unicode.hs  Util.hs  Verbosity.hs
Test/MakeTutor/: Makefile  hellomake.c  hellomake.h
Test/Ninja/: compdb.ninja  lint.ninja  nocreate.ninja  test1.ninja  test2.ninja  test3-inc.ninja  test3-sub.ninja  test3-win.ninja  test3.ninja  test4.ninja  test6-inc.ninja  test6-sub.ninja  test6.ninja
Test/Progress/: self-clean-j2.prog  self-rebuild-j2.prog  self-zero-j2.prog
Test/Tar/: list.txt
academic/icfp2012/: layout.eps  layout.gviz  profile.eps  shake.tex  states.eps
docs/: About.md  Architecture.md  Cloud.md  CommandLine.md  Debugging.md  Demo.md  Developing.md  Docs.md  FAQ.md  Includes.md  Index.md  Manual.md  Model.md  Ninja.md  Profiling.md  Rebuilds.md  Why.md
docs/manual/: Build.hs  Shakefile.hs  build.bat  build.sh
extra/: report.html
html/: README.md  convert.html  convert.js  demo.html  jquery.flot.min.js  jsl.conf  profile-data.js  profile-new.html  profile.html  progress-data.js  progress.html  report.html  report2.html  shake-logic.js  shake-progress.js  shake-test.js  shake-ui.js  shake-util.js  shake.js  test.html  test.js  version.js
html/data/: profile-data.js  version.js
html/ts/: .gitignore  Shake.csproj  Shake.sln  elements.ts  elements.tsx  generated.d.ts  jquery.flot.d.ts  profile-data.ts  profile.ts  profile.tsx  search.tsx  shake-logic.ts  shake-progress.ts  shake-test.ts  shake-ui.ts  shake-util.ts  tsconfig.json  tslint.json  types.ts  util.ts
html/ts/elements/: search.tsx
html/ts/reports/: cmdplot.tsx  cmdtable.tsx  parallelism.tsx  performance.tsx  rebuild.tsx  ruletable.tsx  search.ts  search.tsx  summary.tsx
misc/win7-taskbar/: Main.cs  Taskbar.csproj  Taskbar.sln  TaskbarCOMInterfaces.cs  TaskbarNativeMethods.cs
model/: Main.hs  Model.hs  Model.md  Test.hs  Util.hs
src/: Main.hs  Paths.hs  Run.hs  Start.hs  Test.hs
src/Development/: Rattle.hs  Shake.hs
src/Development/Make/: All.hs  Parse.hs  Rules.hs  Type.hs
src/Development/Ninja/: All.hs  Env.hs  Lexer.hs  Parse.hs  Type.hs
src/Development/Rattle/: Hash.hs  Limit.hs  Server.hs  Shared.hs  Types.hs
src/Development/Shake/: Args.hs  ByteString.hs  Classes.hs  CmdOption.hs  Command.hs  Config.hs  Core.hs  Core2.hs  Database.hs  Database2.hs  Demo.hs  Derived.hs  Errors.hs  FileInfo.hs  FilePath.hs  FilePattern.hs  FilePattern2.hs  FilePatternOld.hs  Forward.hs  Interface.hs  Memo.hs  Monad.hs  Pool.hs  Profile.hs  Progress.hs  Resource.hs  Rule.hs  Shake.hs  Special.hs  Storage.hs  Types.hs  Util.hs  Value.hs
src/Development/Shake/Experiment/: Interface.hs  Rules.hs
src/Development/Shake/Internal/: Args.hs  ByteString.hs  CmdOption.hs  CompactUI.hs  Core.hs  Database.hs  Demo.hs  Derived.hs  Errors.hs  FileInfo.hs  FileName.hs  Memo.hs  (+17 more)
src/General/: Bag.hs  Bilist.hs  Binary.hs  Chunks.hs  Cleanup.hs  Concurrent.hs  Encoder.hs  EscCodes.hs  Extra.hs  Fence.hs  FileLock.hs  GetOpt.hs  Heap.hs  Ids.hs  Intern.hs  ListBuilder.hs  Pool.hs  Process.hs  RLock.hs  String.hs  Template.hs  Thread.hs  Timing.hs  TypeMap.hs  Wait.hs
src/Test/: Assume.hs  Basic.hs  Batch.hs  Benchmark.hs  Builtin.hs  BuiltinOverride.hs  C.hs  Cache.hs  Cleanup.hs  CloseFileHandles.hs  Command.hs  Config.hs  Database.hs  Deprioritize.hs  Digest.hs  Directory.hs  Docs.hs  Errors.hs  Existence.hs  FileLock.hs  FilePath.hs  FilePattern.hs  Files.hs  Forward.hs  GetTargets.hs  History.hs  Journal.hs  Lint.hs  Live.hs  Makefile.hs  Manual.hs  Match.hs  Monad.hs  Ninja.hs  Oracle.hs  OrderOnly.hs  Parallel.hs  Pool.hs  Progress.hs  Random.hs  (+16 more)
src/Test/Ninja/: buildseparate.ninja  redefine.ninja  restart.ninja  test3-unix.ninja  test3-win.ninja  test3.ninja  test7.ninja
src/Test/Tar/: list.txt
src/Test/Tup/: root.cfg
tests/integration/: testconfig.mk
tests/integration/basic01/: Makefile  shakefile.hs
website/: .ghci  Code.hs  Library.hs  Main.hs  Main2.hs  MarkdownTest.hs  index.css  prefix.txt  stack.yaml  suffix.txt
website/parts/: content.html  footer.html  header.html
(+37 files in other folders)
